Fixed classes to prevent styling overlaps

--- a/styles/main_styles.css
+++ b/styles/main_styles.css
@@ -46,7 +46,7 @@ h1 {
   font-weight: 600;
 }
 
-section {
+.showcase {
   font-family: "Poppins";
   padding: 25px;
   transform: translateY(150px);
@@ -106,11 +106,6 @@ li {
 
   #menu {
     display: none;
-  }
-
-  .section {
-    transform: translateY(30%);
-    padding: 100px;
   }
 
   .intro {
